--- a/application.properties
+++ b/application.properties
@@ -1,4 +1,4 @@
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:orcl
-spring.datasource.username=c##dilip
-spring.datasource.password=abc123
+spring.datasource.username=dhsadhsh
+spring.datasource.password=xyz111
   
