--- a/application.properties
+++ b/application.properties
@@ -1,4 +1,9 @@
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:orcl
 spring.datasource.username=dhsadhsh
 spring.datasource.password=xyz111
+
+
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=true
+
   
