--- a/application.properties
+++ b/application.properties
@@ -2,7 +2,7 @@ spring.datasource.url=jdbc:oracle:thin:@localhost:1521:orcl
 spring.datasource.username=c##dilip
 spring.datasource.password=dilip
 
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 
