--- a/application.properties
+++ b/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:orcl
 spring.datasource.username=c##dilip
-spring.datasource.password=dilip
+spring.datasource.password=xyz123
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
